# qr-platform

./: .gitignore  Dockerfile  LICENSE  README.md  main.py  pyproject.toml
app/: main.py
templates/: index.html
